Started parsing code; fixed printing help message